# Research-Project

backend/: .gitignore  main.py  ollama_service.py  pyproject.toml  requirements.txt
backend/api/route/: research.py
backend/auth/: user.py
backend/crud/: research_crud.py
backend/schema/: chat_models.py  file_schema.py  pydantic_models.py
backend/utility/: conversation_history.py  extract_url_content.py  ingest.py  llm_utils.py  redis_util.py
